[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/page17-18/hans5.webp" type="Texture" id=1]
[ext_resource path="res://assets/page17-18/bg-page.webp" type="Texture" id=2]
[ext_resource path="res://components/GUI/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/ADLA/page17-18.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Lato-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/page17-18/hans4.webp" type="Texture" id=6]
[ext_resource path="res://assets/general/pointer_start.png" type="Texture" id=7]
[ext_resource path="res://assets/page17-18/hans1.webp" type="Texture" id=8]
[ext_resource path="res://assets/page17-18/hans2.webp" type="Texture" id=9]
[ext_resource path="res://assets/page17-18/hans3.webp" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Page17-18" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundImage" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 96.0
margin_top = 262.0
margin_right = 812.0
margin_bottom = 727.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Una tarde, la furia de Hans se desbordó y decidió acabar
con el problema que lo atormentaba en primavera: la
sombra del árbol. Furioso, cogió una sierra eléctrica y
empezó a talar:

—¡Rrr...rrr! ¡Qué duro y pesado es este árbol! ¡Ay, ay!

Hans se agarraba la cabeza y no se daba por vencido;
por el contrario, se animaba repitiendo una y otra vez:

—¡Uff! ¡Un poco de paciencia y fuerza para terminar con
este estorbo!"

[node name="AnimatedHans" type="AnimatedSprite" parent="."]
position = Vector2( 1425, 541 )
scale = Vector2( 0.369844, 0.415704 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="GUI" parent="." instance=ExtResource( 3 )]

[node name="ButtonModalHans" type="Button" parent="."]
margin_left = 1185.0
margin_top = 630.0
margin_right = 1265.0
margin_bottom = 710.0
mouse_default_cursor_shape = 2
icon = ExtResource( 7 )
flat = true
expand_icon = true

[connection signal="tree_entered" from="." to="." method="_on_Page1718_tree_entered"]
[connection signal="mouse_entered" from="ButtonModalHans" to="." method="_on_ButtonModalHans_mouse_entered"]
[connection signal="mouse_exited" from="ButtonModalHans" to="." method="_on_ButtonModalHans_mouse_exited"]
[connection signal="pressed" from="ButtonModalHans" to="." method="_on_ButtonModalHans_pressed"]
